# mmux-emacs-gmp

./: .travis.yml  Makefile.am  README  README.md  configure.ac
doc/: elisp-macros.texi  mmux-emacs-gmp.texi
meta/scripts/: mmux-emacs-gmp.pc.in
meta/slackware/: slack-desc.in
src/: gmp.el  mmux-emacs-gmp-builtin-objects.c  mmux-emacs-gmp-floating-point-numbers.c  mmux-emacs-gmp-integer-functions.c  mmux-emacs-gmp-integer-numbers.c  mmux-emacs-gmp-internals.h  mmux-emacs-gmp-library.c  mmux-emacs-gmp-miscellaneous.c  mmux-emacs-gmp-rational-numbers.c  mmux-emacs-gmp-user-pointer-objects.c  mmux-emacs-gmp.el  mmux-emacs-gmp.h  mmux-emacs-internals.h
tests/: builtin-objects-use.el  floating-point-numbers.el  integer-functions.el  integer-numbers.el  random-numbers-generators.el  rational-numbers.el  user-pointer-objects.el  version.el
